--- a/test/my-view1.html
+++ b/test/my-view1.html
@@ -1,152 +1,7 @@
-import {
-  Button,
-  Field,
-  HStack,
-  Input,
-  NativeSelect,
-  useDisclosure,
-} from '@chakra-ui/react';
-import { useForm } from 'react-hook-form';  
-import { config } from '@/config';
-import { useMutation } from '@tanstack/react-query';
-import { useState } from 'react';
-import { IssuerHoldingsModal } from './IssuerHoldingsModal';  // import the new Dialog-based modal
-
-interface IssuerFormData {
-  issuerName: string;
-  issuerType: string;
-  ticker: string;
-  isin: string;
-  cusip: string;
-  sedol: string;
-}
-
-const CreateWallCrosssedIssuerModal = ({ onClose }: { onClose: () => void }) => {
-  const { register, handleSubmit, watch } = useForm<IssuerFormData>({
-    defaultValues: { issuerType: 'Public' },
-  });
-
-  const ticker = watch('ticker');
-  const isin = watch('isin');
-  const cusip = watch('cusip');
-  const sedol = watch('sedol');
-
-  const [buttonLabel, setButtonLabel] = useState('Fetch Issuer Details');
-  const [fetchedDetails, setFetchedDetails] = useState<any>(null);
-  const [wcId, setWcId] = useState<string | null>(null);
-
-  const { isOpen: isHoldingsOpen, onOpen: onHoldingsOpen, onClose: onHoldingsClose } = useDisclosure();
-
-  const mutation = useMutation({
-    mutationFn: async (payload: IssuerFormData) => {
-      const url = `${config.apis.mdmApi}/wallcross/validate`;
-      const res = await fetch(url, {
-        method: 'POST',
-        credentials: 'include',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(payload),
-      });
-      if (!res.ok) {
-        const txt = await res.text().catch(() => '');
-        throw new Error(`Failed to create issuer: ${res.status} ${txt}`);
-      }
-      return res.json();
-    },
-    onSuccess: (data) => {
-      setFetchedDetails(data);
-      setWcId(data.wcId);
-      setButtonLabel('Search Issuer Holdings');
-    },
-  });
-
-  const onSubmit = (data: IssuerFormData) => {
-    if (data.issuerType === 'Public' && !(ticker || isin || cusip || sedol)) {
-      alert('For Public issuers, at least one of Ticker, ISIN, CUSIP, or SEDOL is required.');
-      return;
-    }
-
-    buttonLabel === 'Fetch Issuer Details' ? mutation.mutate(data) : onHoldingsOpen();
-  };
-
-  const handleProceedToWallCross = () => {
-    if (!wcId) return;
-    console.log('Proceeding with wcId:', wcId);
-    onHoldingsClose();
-    onClose();
-  };
-
-  const handleRefuseWallCross = () => {
-    if (!wcId) return;
-    console.log('Refusing with wcId:', wcId);
-    onHoldingsClose();
-    onClose();
-  };
-
-  return (
-    <>
-      <form onSubmit={handleSubmit(onSubmit)}>
-        <HStack gap={4} mb={4}>
-          <Field.Root>
-            <Field.Label>Issuer Name</Field.Label>
-            <Input
-              {...register('issuerName', { required: 'Issuer name is required' })}
-              placeholder="Enter value"
-            />
-          </Field.Root>
-
-          <Field.Root>
-            <Field.Label>Issuer Type</Field.Label>
-            <NativeSelect.Root>
-              <NativeSelect.Field {...register('issuerType')}>
-                <option value="Public">Public</option>
-                <option value="Private">Private</option>
-              </NativeSelect.Field>
-              <NativeSelect.Indicator />
-            </NativeSelect.Root>
-          </Field.Root>
-        </HStack>
-
-        <HStack gap={4} mb={4}>
-          <Field.Root>
-            <Field.Label>Ticker</Field.Label>
-            <Input {...register('ticker')} placeholder="Enter value" />
-          </Field.Root>
-
-          <Field.Root>
-            <Field.Label>ISIN</Field.Label>
-            <Input {...register('isin')} placeholder="Enter value" />
-          </Field.Root>
-        </HStack>
-
-        <HStack gap={4} mb={4}>
-          <Field.Root>
-            <Field.Label>CUSIP</Field.Label>
-            <Input {...register('cusip')} placeholder="Enter value" />
-          </Field.Root>
-          <Field.Root>
-            <Field.Label>SEDOL</Field.Label>
-            <Input {...register('sedol')} placeholder="Enter value" />
-          </Field.Root>
-        </HStack>
-
-        <HStack justify="flex-end" mt={6}>
-          <Button variant="outline" onClick={onClose}>Cancel</Button>
-          <Button type="submit" colorScheme="blue" disabled={mutation.isPending}>
-            {buttonLabel}
-          </Button>
-        </HStack>
-      </form>
-
-      {/* Issuer Holdings Modal */}
-      <IssuerHoldingsModal
-        isOpen={isHoldingsOpen}
-        onClose={onHoldingsClose}
-        issuerDetails={fetchedDetails}
-        onProceed={handleProceedToWallCross}
-        onRefuse={handleRefuseWallCross}
-      />
-    </>
-  );
-};
-
-export default CreateWallCrosssedIssuerModal;
+if (buttonLabel === 'Fetch Issuer Details') {
+    mutation.mutate(data);
+  } else {
+    // ✅ Close this modal and open IssuerHoldingsModal
+    onClose();        // close CreateWallCrosssedIssuerModal
+    onHoldingsOpen(); // open IssuerHoldingsModal
+  }
