--- a/test/my-view1.html
+++ b/test/my-view1.html
@@ -1,182 +1,9 @@
-// IssuerHoldingsModal.tsx
-import {
-  Dialog,
-  Portal,
-  Button,
-  CloseButton,
-  HStack,
-  VStack,
-  Text,
-  Box,
-  Table,
-  Tabs,
-} from "@chakra-ui/react";
+Post Request: http://nycuapp03.biz.lodh.com:8787/wallcross/cancel
+Payload:
 
-interface Holding {
-  [key: string]: any;
+{
+  "wcId": 0,
+  "reason": "string"
 }
 
-interface Trade {
-  [key: string]: any;
-}
 
-interface IssuerDetails {
-  wcId: number | null;
-  validatedIssuerName?: string;
-  vrequest?: Record<string, any>;
-  hgList?: Holding[];
-  thList?: Trade[];
-}
-
-interface IssuerHoldingsModalProps {
-  isOpen: boolean;
-  onClose: () => void;
-  issuerDetails: IssuerDetails;
-  onProceed: () => void;
-  onRefuse: () => void;
-}
-
-export function IssuerHoldingsModal({
-  isOpen,
-  onClose,
-  issuerDetails,
-  onProceed,
-  onRefuse,
-}: IssuerHoldingsModalProps) {
-  if (!issuerDetails) return null;
-
-  const { hgList = [], thList = [] } = issuerDetails;
-
-  return (
-    <Dialog.Root open={isOpen} onOpenChange={(open) => !open && onClose()}>
-      <Portal>
-        <Dialog.Backdrop />
-        <Dialog.Positioner>
-          <Dialog.Content bg="gray.800" color="white" maxW="90vw" p={4}>
-            <Dialog.Header>
-              <Text fontSize="lg" fontWeight="bold">
-                Issuer Holdings -{" "}
-                {issuerDetails.validatedIssuerName ||
-                  issuerDetails.vrequest?.issuerName ||
-                  "-"}
-              </Text>
-            </Dialog.Header>
-
-            <Dialog.CloseTrigger asChild>
-              <CloseButton position="absolute" top={2} right={2} />
-            </Dialog.CloseTrigger>
-
-            <Dialog.Body>
-              <VStack spacing={6} align="stretch">
-                {/* Issuer Details */}
-                {issuerDetails.vrequest && (
-                  <Box bg="gray.700" p={4} borderRadius="md">
-                    <Text fontWeight="bold" mb={2}>
-                      Issuer Details
-                    </Text>
-                    <HStack spacing={8} flexWrap="wrap">
-                      {Object.entries(issuerDetails.vrequest).map(
-                        ([key, value]) => (
-                          <Text key={key} fontSize="sm">
-                            <strong>{key}:</strong> {String(value) ?? "-"}
-                          </Text>
-                        )
-                      )}
-                    </HStack>
-                  </Box>
-                )}
-
-                {/* Tabs for Holdings & Trade History */}
-                <Tabs.Root defaultValue="holdings">
-                  <Tabs.List mb={4}>
-                    <Tabs.Trigger value="holdings">Holdings</Tabs.Trigger>
-                    <Tabs.Trigger value="trades">Trade History</Tabs.Trigger>
-                  </Tabs.List>
-
-                  <Tabs.Content value="holdings">
-                    <Box>
-                      <Text fontWeight="bold" mb={2}>
-                        Holdings
-                      </Text>
-                      <Box overflowX="auto">
-                        <Table.Root size="sm">
-                          <Table.Header>
-                            <Table.Row>
-                              {hgList[0] &&
-                                Object.keys(hgList[0]).map((key) => (
-                                  <Table.ColumnHeader key={key}>
-                                    {key}
-                                  </Table.ColumnHeader>
-                                ))}
-                            </Table.Row>
-                          </Table.Header>
-                          <Table.Body>
-                            {hgList.map((holding, idx) => (
-                              <Table.Row key={idx}>
-                                {Object.keys(holding).map((key) => (
-                                  <Table.Cell key={key}>
-                                    {holding[key]?.toString() ?? "-"}
-                                  </Table.Cell>
-                                ))}
-                              </Table.Row>
-                            ))}
-                          </Table.Body>
-                        </Table.Root>
-                      </Box>
-                    </Box>
-                  </Tabs.Content>
-
-                  <Tabs.Content value="trades">
-                    <Box>
-                      <Text fontWeight="bold" mb={2}>
-                        Trade History (Last 90 days)
-                      </Text>
-                      <Box overflowX="auto">
-                        <Table.Root size="sm">
-                          <Table.Header>
-                            <Table.Row>
-                              {thList[0] &&
-                                Object.keys(thList[0]).map((key) => (
-                                  <Table.ColumnHeader key={key}>
-                                    {key}
-                                  </Table.ColumnHeader>
-                                ))}
-                            </Table.Row>
-                          </Table.Header>
-                          <Table.Body>
-                            {thList.map((trade, idx) => (
-                              <Table.Row key={idx}>
-                                {Object.keys(trade).map((key) => (
-                                  <Table.Cell key={key}>
-                                    {trade[key]?.toString() ?? "-"}
-                                  </Table.Cell>
-                                ))}
-                              </Table.Row>
-                            ))}
-                          </Table.Body>
-                        </Table.Root>
-                      </Box>
-                    </Box>
-                  </Tabs.Content>
-                </Tabs.Root>
-
-                {/* Action Buttons */}
-                <HStack justify="flex-end" spacing={3}>
-                  <Button variant="outline" colorScheme="gray" onClick={onClose}>
-                    Close
-                  </Button>
-                  <Button onClick={onRefuse} colorScheme="red">
-                    Refuse Wall Cross
-                  </Button>
-                  <Button onClick={onProceed} colorScheme="green">
-                    Proceed to Wall Cross
-                  </Button>
-                </HStack>
-              </VStack>
-            </Dialog.Body>
-          </Dialog.Content>
-        </Dialog.Positioner>
-      </Portal>
-    </Dialog.Root>
-  );
-}
