--- a/test/index.html
+++ b/test/index.html
@@ -1,184 +1,182 @@
-// CreateWallCrosssedIssuerModal.tsx
+// IssuerHoldingsModal.tsx
 import {
+  Dialog,
+  Portal,
   Button,
-  Field,
+  CloseButton,
   HStack,
-  Input,
-  NativeSelect,
-  useDisclosure,
+  VStack,
+  Text,
+  Box,
+  Table,
+  Tabs,
 } from "@chakra-ui/react";
-import { useForm } from "react-hook-form";
-import { config } from "@/config";
-import { useMutation } from "@tanstack/react-query";
-import { useState } from "react";
-import { IssuerHoldingsModal } from "./IssuerHoldingsModal";
 
-interface IssuerFormData {
-  issuerName: string;
-  issuerType: string;
-  ticker: string;
-  isin: string;
-  cusip: string;
-  sedol: string;
+interface Holding {
+  [key: string]: any;
 }
 
-export const CreateWallCrosssedIssuerModal = ({
-  onClose,
-}: {
+interface Trade {
+  [key: string]: any;
+}
+
+interface IssuerDetails {
+  wcId: number | null;
+  validatedIssuerName?: string;
+  vrequest?: Record<string, any>;
+  hgList?: Holding[];
+  thList?: Trade[];
+}
+
+interface IssuerHoldingsModalProps {
+  open: boolean;
   onClose: () => void;
-}) => {
-  const { register, handleSubmit, watch } = useForm<IssuerFormData>({
-    defaultValues: { issuerType: "Public" },
-  });
+  issuerDetails: IssuerDetails;
+  onProceed: () => void;
+  onRefuse: () => void;
+}
 
-  const ticker = watch("ticker");
-  const isin = watch("isin");
-  const cusip = watch("cusip");
-  const sedol = watch("sedol");
+export function IssuerHoldingsModal({
+  open,
+  onClose,
+  issuerDetails,
+  onProceed,
+  onRefuse,
+}: IssuerHoldingsModalProps) {
+  if (!issuerDetails) return null;
 
-  const [buttonLabel, setButtonLabel] = useState("Fetch Issuer Details");
-  const [validatedData, setValidatedData] = useState<any>(null);
-  const [holdingData, setHoldingData] = useState<any>(null);
-
-  const { isOpen: isHoldingsOpen, onOpen: onHoldingsOpen, onClose: onHoldingsClose } =
-    useDisclosure();
-
-  // Validate Issuer API
-  const validateMutation = useMutation({
-    mutationFn: async (payload: IssuerFormData) => {
-      const url = `${config.apis.mdmApi}/wallcross/validate`;
-      const res = await fetch(url, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(payload),
-      });
-      if (!res.ok) {
-        const txt = await res.text().catch(() => "");
-        throw new Error(`Validation failed: ${res.status} ${txt}`);
-      }
-      return res.json();
-    },
-    onSuccess: (data) => {
-      setValidatedData(data);
-      setButtonLabel("Search Issuer Holdings");
-    },
-  });
-
-  // Fetch Holdings API
-  const fetchHoldingsMutation = useMutation({
-    mutationFn: async (wcId: number) => {
-      const url = `${config.apis.mdmApi}/wallcross/process/${wcId}`;
-      const res = await fetch(url, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-      });
-      if (!res.ok) {
-        const txt = await res.text().catch(() => "");
-        throw new Error(`Fetch holdings failed: ${res.status} ${txt}`);
-      }
-      return res.json();
-    },
-    onSuccess: (data) => {
-      setHoldingData({ ...validatedData, ...data });
-      onHoldingsOpen();
-      onClose(); // Close this modal
-    },
-  });
-
-  const onSubmit = (data: IssuerFormData) => {
-    if (data.issuerType === "Public" && !ticker && !isin && !cusip && !sedol) {
-      alert(
-        "For Public issuers, at least one of Ticker, ISIN, CUSIP, or SEDOL is required."
-      );
-      return;
-    }
-
-    if (buttonLabel === "Fetch Issuer Details") {
-      validateMutation.mutate(data);
-    } else if (validatedData?.wcId) {
-      fetchHoldingsMutation.mutate(validatedData.wcId);
-    }
-  };
-
-  const handleProceedToWallCross = () => {
-    console.log("Proceeding with wcId:", holdingData?.wcId);
-    onHoldingsClose();
-  };
-
-  const handleRefuseWallCross = () => {
-    console.log("Refusing with wcId:", holdingData?.wcId);
-    onHoldingsClose();
-  };
+  const { hgList = [], thList = [] } = issuerDetails;
 
   return (
-    <>
-      <form onSubmit={handleSubmit(onSubmit)}>
-        <HStack gap={4} mb={4}>
-          <Field.Root>
-            <Field.Label>Issuer Name</Field.Label>
-            <Input
-              {...register("issuerName", { required: "Issuer name is required" })}
-              placeholder="Enter value"
-            />
-          </Field.Root>
+    <Dialog.Root open={open} onOpenChange={(open) => !open && onClose()}>
+      <Portal>
+        <Dialog.Backdrop />
+        <Dialog.Positioner>
+          <Dialog.Content bg="gray.800" color="white" maxW="90vw" p={4}>
+            <Dialog.Header>
+              <Text fontSize="lg" fontWeight="bold">
+                Issuer Holdings -{" "}
+                {issuerDetails.validatedIssuerName ||
+                  issuerDetails.vrequest?.issuerName ||
+                  "-"}
+              </Text>
+            </Dialog.Header>
 
-          <Field.Root>
-            <Field.Label>Issuer Type</Field.Label>
-            <NativeSelect.Root>
-              <NativeSelect.Field {...register("issuerType")}>
-                <option value="Public">Public</option>
-                <option value="Private">Private</option>
-              </NativeSelect.Field>
-              <NativeSelect.Indicator />
-            </NativeSelect.Root>
-          </Field.Root>
-        </HStack>
+            <Dialog.CloseTrigger asChild>
+              <CloseButton position="absolute" top={2} right={2} />
+            </Dialog.CloseTrigger>
 
-        <HStack gap={4} mb={4}>
-          <Field.Root>
-            <Field.Label>Ticker</Field.Label>
-            <Input {...register("ticker")} placeholder="Enter value" />
-          </Field.Root>
-          <Field.Root>
-            <Field.Label>ISIN</Field.Label>
-            <Input {...register("isin")} placeholder="Enter value" />
-          </Field.Root>
-        </HStack>
+            <Dialog.Body>
+              <VStack mb={6} align="stretch">
+                {/* Issuer Details */}
+                {issuerDetails.vrequest && (
+                  <Box bg="gray.700" p={4} borderRadius="md">
+                    <Text fontWeight="bold" mb={2}>
+                      Issuer Details
+                    </Text>
+                    <HStack mb={8} flexWrap="wrap">
+                      {Object.entries(issuerDetails.vrequest).map(
+                        ([key, value]) => (
+                          <Text key={key} fontSize="sm">
+                            <strong>{key}:</strong> {String(value) ?? "-"}
+                          </Text>
+                        )
+                      )}
+                    </HStack>
+                  </Box>
+                )}
 
-        <HStack gap={4} mb={4}>
-          <Field.Root>
-            <Field.Label>CUSIP</Field.Label>
-            <Input {...register("cusip")} placeholder="Enter value" />
-          </Field.Root>
-          <Field.Root>
-            <Field.Label>SEDOL</Field.Label>
-            <Input {...register("sedol")} placeholder="Enter value" />
-          </Field.Root>
-        </HStack>
+                {/* Tabs for Holdings & Trade History */}
+                <Tabs.Root defaultValue="holdings">
+                  <Tabs.List mb={4}>
+                    <Tabs.Trigger value="holdings">Holdings</Tabs.Trigger>
+                    <Tabs.Trigger value="trades">Trade History</Tabs.Trigger>
+                  </Tabs.List>
 
-        <HStack justify="flex-end" mt={6}>
-          <Button variant="outline" onClick={onClose}>
-            Cancel
-          </Button>
-          <Button
-            type="submit"
-            colorScheme="blue"
-            disabled={validateMutation.isLoading || fetchHoldingsMutation.isLoading}
-          >
-            {buttonLabel}
-          </Button>
-        </HStack>
-      </form>
+                  <Tabs.Content value="holdings">
+                    <Box>
+                      <Text fontWeight="bold" mb={2}>
+                        Holdings
+                      </Text>
+                      <Box overflowX="auto">
+                        <Table.Root size="sm">
+                          <Table.Header>
+                            <Table.Row>
+                              {hgList[0] &&
+                                Object.keys(hgList[0]).map((key) => (
+                                  <Table.ColumnHeader key={key}>
+                                    {key}
+                                  </Table.ColumnHeader>
+                                ))}
+                            </Table.Row>
+                          </Table.Header>
+                          <Table.Body>
+                            {hgList.map((holding, idx) => (
+                              <Table.Row key={idx}>
+                                {Object.keys(holding).map((key) => (
+                                  <Table.Cell key={key}>
+                                    {holding[key]?.toString() ?? "-"}
+                                  </Table.Cell>
+                                ))}
+                              </Table.Row>
+                            ))}
+                          </Table.Body>
+                        </Table.Root>
+                      </Box>
+                    </Box>
+                  </Tabs.Content>
 
-      {holdingData && (
-        <IssuerHoldingsModal
-          isOpen={isHoldingsOpen}
-          onClose={onHoldingsClose}
-          issuerDetails={holdingData}
-          onProceed={handleProceedToWallCross}
-          onRefuse={handleRefuseWallCross}
-        />
-      )}
-    </>
+                  <Tabs.Content value="trades">
+                    <Box>
+                      <Text fontWeight="bold" mb={2}>
+                        Trade History (Last 90 days)
+                      </Text>
+                      <Box overflowX="auto">
+                        <Table.Root size="sm">
+                          <Table.Header>
+                            <Table.Row>
+                              {thList[0] &&
+                                Object.keys(thList[0]).map((key) => (
+                                  <Table.ColumnHeader key={key}>
+                                    {key}
+                                  </Table.ColumnHeader>
+                                ))}
+                            </Table.Row>
+                          </Table.Header>
+                          <Table.Body>
+                            {thList.map((trade, idx) => (
+                              <Table.Row key={idx}>
+                                {Object.keys(trade).map((key) => (
+                                  <Table.Cell key={key}>
+                                    {trade[key]?.toString() ?? "-"}
+                                  </Table.Cell>
+                                ))}
+                              </Table.Row>
+                            ))}
+                          </Table.Body>
+                        </Table.Root>
+                      </Box>
+                    </Box>
+                  </Tabs.Content>
+                </Tabs.Root>
+
+                {/* Action Buttons */}
+                <HStack justify="flex-end" mb={3}>
+                  <Button variant="outline" colorScheme="gray" onClick={onClose}>
+                    Close
+                  </Button>
+                  <Button onClick={onRefuse} colorScheme="red">
+                    Refuse Wall Cross
+                  </Button>
+                  <Button onClick={onProceed} colorScheme="green">
+                    Proceed to Wall Cross
+                  </Button>
+                </HStack>
+              </VStack>
+            </Dialog.Body>
+          </Dialog.Content>
+        </Dialog.Positioner>
+      </Portal>
+    </Dialog.Root>
   );
-};
+}
